# CoBRA

./: .clang-tidy  .codespellrc  .gitignore  BUILD.md  CMakeLists.txt  DATASETS.md  LICENSE  README.md  THIRD_PARTY_LICENSES  justfile  prek.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
cmake/: CobraConfig.cmake.in  Tracy.cmake
cmake/config/: GTestConfig.cmake.in  abslConfig.cmake.in  hwyConfig.cmake.in
dependencies/: CMakeLists.txt  abseil.cmake  googletest.cmake  highway.cmake  llvm.cmake  nanobind.cmake  superbuild.cmake  z3.cmake
docs/methodology/: README.md  ast-processing.md  decomposition.md  lifting.md  linear-pipeline.md  mixed-pipeline.md  orchestrator.md  polynomial-pipeline.md  semilinear-pipeline.md  semilinear-techniques.md  signature-techniques.md  techniques.md
include/cobra/core/: AnfCleanup.h  AnfTransform.h  ArithmeticLowering.h  AtomSimplifier.h  AuxVarEliminator.h  BasisTransform.h  BitPartitioner.h  BitWidth.h  BitwiseDecomposer.h  Classification.h  Classifier.h  CoBExprBuilder.h  CoeffInterpolator.h  CoefficientSplitter.h  CompiledExpr.h  DecompositionEngine.h  DynamicMask.h  Evaluator.h  ExponentTuple.h  Expr.h  ExprCost.h  ExprUtils.h  ExtensionLowering.h  GhostBasis.h  GhostResidualSolver.h  PolyIR.h  (+35 more)
lib/bindings/python/: CMakeLists.txt  CobraPython.cpp  CobraPython.hpp  PythonInterface.cpp
lib/core/: AnfCleanup.cpp  AnfTransform.cpp  ArithmeticLowering.cpp  AtomSimplifier.cpp  AuxVarEliminator.cpp  BasisTransform.cpp  BitPartitioner.cpp  BitwiseDecomposer.cpp  CMakeLists.txt  Classifier.cpp  CoBExprBuilder.cpp  CoeffInterpolator.cpp  CoefficientSplitter.cpp  CompetitionGroup.cpp  CompetitionGroup.h  CompiledExpr.cpp  ContinuationTypes.h  DecompositionEngine.cpp  DecompositionPassHelpers.cpp  DecompositionPassHelpers.h  DecompositionPasses.cpp  DynamicMask.cpp  Expr.cpp  ExprCost.cpp  ExprUtils.cpp  ExtensionLowering.cpp  GhostBasis.cpp  GhostResidualSolver.cpp  HybridDecomposer.cpp  JoinState.cpp  JoinState.h  LiftingPasses.cpp  LiftingPasses.h  MaskedAtomReconstructor.cpp  MixedProductRewriter.cpp  MultivarPolyRecovery.cpp  Npn4Table.inc  NullPolyGenerator.cpp  OperandSimplifier.cpp  Orchestrator.cpp  (+29 more)
lib/ida/: CMakeLists.txt  MicrocodeConverter.cpp  MicrocodeConverter.h  MicrocodeDetector.cpp  MicrocodeDetector.h  Verifier.cpp  Verifier.h  ida-cobra.cfg  ida-cobra.cpp
lib/llvm/: CMakeLists.txt  CobraPass.cpp  IRReconstructor.cpp  IRReconstructor.h  MBADetector.cpp  MBADetector.h
lib/verify/: CMakeLists.txt  Z3Verifier.cpp
scripts/: gen_npn4_table.py
test/: CMakeLists.txt
test/bench/: bench_mask_audit.cpp  bench_semantic_bitwise_audit.cpp  bench_signature_eval.cpp  bench_signature_pipeline.cpp
test/core/: test_anf_cleanup.cpp  test_anf_transform.cpp  test_arithmetic_lowering.cpp  test_atom_simplifier.cpp  test_aux_var_eliminator.cpp  test_basis_transform.cpp  test_bit_partitioner.cpp  test_bitwidth.cpp  test_bitwise_decomposer.cpp  test_classifier.cpp  test_cob_expr_builder.cpp  test_coeff_interpolator.cpp  test_coefficient_splitter.cpp  test_competition_group.cpp  test_decomposition_engine.cpp  test_decomposition_helpers.cpp  test_decomposition_types.cpp  test_dynamic_mask.cpp  test_exponent_tuple.cpp  test_expr.cpp  test_expr_cost.cpp  test_expr_parser.cpp  test_extension_lowering.cpp  test_extractor_passes.cpp  test_ghost_basis.cpp  test_ghost_residual_solver.cpp  test_hybrid_decomposer.cpp  test_lifting_passes.cpp  test_masked_atom_reconstructor.cpp  test_math_utils.cpp  test_mixed_product_rewriter.cpp  test_monomial_key.cpp  test_multivar_poly_recovery.cpp  test_null_poly_generator.cpp  test_operand_simplifier.cpp  test_orchestrator_parity.cpp  test_orchestrator_telemetry.cpp  test_orchestrator_types.cpp  test_pass_contract.cpp  test_pattern_matcher.cpp  (+24 more)
test/datasets/: msimba.txt  obfuscatorx.txt  permutation64.txt  univariate64.txt
test/datasets/gamba/: loki_tiny.txt  mba_flatten.txt  mba_obf_linear.txt  mba_obf_nonlinear.txt  neureduce.txt  qsynth_ea.txt  syntia.txt
test/datasets/oses/: oses_fast.txt
test/datasets/simba/: blast_dataset1.txt  blast_dataset2.txt  e1_2vars.txt  e1_3vars.txt  e1_4vars.txt  e2_2vars.txt  e2_3vars.txt  e2_4vars.txt  e3_2vars.txt  e3_3vars.txt  e3_4vars.txt  e4_2vars.txt  e4_3vars.txt  e4_4vars.txt  e5_2vars.txt  e5_3vars.txt  e5_4vars.txt  pldi_linear.txt  pldi_nonpoly.txt  pldi_poly.txt  test_data.txt
test/idapro/: test_ida_headless.py
test/llvm/: CMakeLists.txt  test_basic.ll  test_cost_gate.ll  test_cross_block.ll  test_dce.ll  test_ext_negative.ll  test_ext_nested.ll  test_ext_semantic.ll  test_lshr.ll  test_not.ll  test_phi_divergent.ll  test_phi_transparent.ll  test_semilinear.ll  test_sext.ll  test_sext_i1.ll  test_var_elim.ll  test_zext.ll  test_zext_simplifies.ll
test/verify/: dataset_audit_utils.h  extended_semantics_probes.h  test_and_zero_structural.cpp  test_arith_over_bitwise_diagnostic.cpp  test_cob_core_candidate_diagnostic.cpp  test_dataset_benchmarks.cpp  test_dataset_z3.cpp  test_extended_semantics_tier1.cpp  test_extended_semantics_tier2.cpp  test_fastpath_delta_taxonomy.cpp  test_forensic_audit.cpp  test_gamba_shortcut_audit.cpp  test_ghost_basis_expansion.cpp  test_ghost_residual_cluster.cpp  test_ghost_weighted_poly.cpp  test_guard_failed_forensic.cpp  test_l244_trace.cpp  test_lifting_diagnostic.cpp  test_linear_aob_pipeline_audit.cpp  test_linear_exhausted_audit.cpp  test_linear_exhausted_forensic.cpp  test_masked_arith_audit.cpp  test_msimba_groundtruth.cpp  test_neureduce_profile.cpp  test_oses_diagnostic.cpp  test_overlap_semantic_extractor.cpp  test_pldi_poly_diagnostic.cpp  test_qsynth_diagnostic.cpp  test_qsynth_trace_dive.cpp  test_rebaseline_audit.cpp  test_residual_characterize.cpp  test_search_exhausted_audit.cpp  test_semantic_poly_audit.cpp  test_semilinear_selfcheck_diagnostic.cpp  test_verify_failed_forensic.cpp  test_verify_failed_forensic_v2.cpp  test_z3_integration.cpp  test_z3_verifier.cpp
tools/cobra-cli/: CMakeLists.txt  ExprParser.cpp  ExprParser.h  main.cpp
(+2 files in other folders)
